Fix flexbox alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -123,7 +123,7 @@
   flex-direction: row;
   align-content: space-between;
   flex-wrap: wrap;
-  align-items: center;
+  align-items: stretch;
 }
 
 .section-body.center {
